Sculpt Cloth breaks Orbit Around Selection when cloth moves away from cursor #74315

Closed
opened 2020-02-29 13:57:41 +01:00 by Floatharr · 16 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-28 16:45, hash: 85f980c517

Short description of error
Sculpt Cloth breaks Orbit Around Selection cloth moves outside of mesh. I assume the Orbit Around Selection depends on something being under the cursor. I tried moving an object to the void it throws me into and object location, here's a screenshot. The other few times I tried it returned NaN. blender_XHrZueKyC3.jpg

Exact steps for others to reproduce the error
Default Factory Startup.

  1. Enable Orbit Around Selection in settings
  2. Add plane, subdivide
  3. Go to sculpt mode, choose cloth brush
  4. Change to grab mode, drag the corner of the cloth so cloth moves out of the cursor.
  5. Orbit.

7H4AxPA1vb.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-28 16:45, hash: `85f980c517` **Short description of error** Sculpt Cloth breaks Orbit Around Selection cloth moves outside of mesh. I assume the Orbit Around Selection depends on something being under the cursor. I tried moving an object to the void it throws me into and object location, here's a screenshot. The other few times I tried it returned NaN. ![blender_XHrZueKyC3.jpg](https://archive.blender.org/developer/F8380012/blender_XHrZueKyC3.jpg) **Exact steps for others to reproduce the error** Default Factory Startup. 1. Enable Orbit Around Selection in settings 2. Add plane, subdivide 3. Go to sculpt mode, choose cloth brush 4. Change to grab mode, drag the corner of the cloth so cloth moves out of the cursor. 5. Orbit. [7H4AxPA1vb.mp4](https://archive.blender.org/developer/F8380016/7H4AxPA1vb.mp4)
Author

Added subscriber: @Floatharr

Added subscriber: @Floatharr

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

Can't reproduce.

Can't reproduce.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can not reproduce even in 85f980c517

Though I am not sure if I follow steps correctly

Change to grab mode, drag the corner of the cloth so cloth moves out of the cursor.

Is this grab tool? Or where I can find this setting?

Can not reproduce even in `85f980c517` Though I am not sure if I follow steps correctly >Change to grab mode, drag the corner of the cloth so cloth moves out of the cursor. Is this grab tool? Or where I can find this setting?
Author

Please follow the steps exactly as listed, and shown in the video. The cloth brush has a deformation mode called "Grab". sculptclothgrab.png

Tested latest daily build eaf0528749, still broken blender_2WQ2P9nrtf.jpg

Please follow the steps exactly as listed, and shown in the video. The cloth brush has a deformation mode called "Grab". ![sculptclothgrab.png](https://archive.blender.org/developer/F8383045/sculptclothgrab.png) Tested latest daily build `eaf0528749`, still broken ![blender_2WQ2P9nrtf.jpg](https://archive.blender.org/developer/F8383048/blender_2WQ2P9nrtf.jpg)
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

I can confirm using a fresh master build f78ca97cfc. I tried enabling auto depth to see if that would prevent it, but I was still able to reproduce.

You have to click above and behind the plane to reproduce the issue. Clicking on the plane, below it or to the side on the right, and orbiting behaves normally.

I can confirm using a fresh master build f78ca97cfc. I tried enabling auto depth to see if that would prevent it, but I was still able to reproduce. You have to click above and behind the plane to reproduce the issue. Clicking on the plane, below it or to the side on the right, and orbiting behaves normally.

Added subscriber: @Debuk

Added subscriber: @Debuk

I had a similar case some days ago, where I suddenly had lost track of the object completely, couldn't even restore the view with "View Selected" or "View All". Does this fail in your case too?

But I am not able to reproduce this here, even with Evans additional infos.

Version for test: 2.83 (sub 5), branch: master, commit date: 2020-02-28 16:45, hash: `85f980c517

I had a similar case some days ago, where I suddenly had lost track of the object completely, couldn't even restore the view with "View Selected" or "View All". Does this fail in your case too? But I am not able to reproduce this here, even with Evans additional infos. Version for test: 2.83 (sub 5), branch: master, commit date: 2020-02-28 16:45, hash: `85f980c517
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I'm able to reproduce the issue.

The issue happens, because the orbit center is the average of the stroke points. However, the stroke points are incorrect, when the mouse is not on top of the mesh anymore, after the simulation started.

I'm able to reproduce the issue. The issue happens, because the orbit center is the average of the stroke points. However, the stroke points are incorrect, when the mouse is not on top of the mesh anymore, after the simulation started.

This issue was referenced by 476c0eab4a

This issue was referenced by 476c0eab4a845581b765b75b9b8d1c3cde1949ba
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-03-11 10:34:09 +01:00
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:39:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74315
No description provided.