Fix T74315: Cloth brush breaks orbit around selection

Reviewers: pablodp606

Differential Revision: https://developer.blender.org/D7095